--- a/src/main/resources/templates/AddStudent.html
+++ b/src/main/resources/templates/AddStudent.html
@@ -25,34 +25,34 @@
           th:action="@{/students/insert-student}" action="ConfirmInsert.html"
           th:object="${student}">
 
-        <div th:if="${#fields.hasErrors('*')}">
+        <th:block th:if="${#fields.hasErrors('*')}">
             <h3 class="error">Input Errors</h3>
             <ul>
                 <li th:each="e: ${#fields.errors('*')}" th:text="${e}"
                     class="error">Input Error</li>
             </ul>
-        </div>
+        </th:block>
         <h2>Student Name</h2>
         <p>
             <label for="first" class="group-label">First Name</label><br>
-            <span th:if="${#fields.hasErrors('firstName')}">
+            <th:block th:if="${#fields.hasErrors('firstName')}">
                 <span class="error" th:errors="*{firstName}">First Name Error</span><br>
-            </span>
+            </th:block>
             <input id="first" type="text" th:field="*{firstName}"/>
         </p>
         <p>
             <label for="last" class="group-label">Last Name</label><br>
-            <span th:if="${#fields.hasErrors('lastName')}">
+            <th:block th:if="${#fields.hasErrors('lastName')}">
                 <span class="error" th:errors="*{lastName}">Last Name Error</span><br>
-            </span>
+            </th:block>
             <input id="last" type="text" th:field="*{lastName}"/>
         </p>
         <h2>Student Info</h2>
         <p>
             <label for="prog" class="group-label">Program</label><br>
-            <span th:if="${#fields.hasErrors('program.id')}">
+            <th:block th:if="${#fields.hasErrors('program.id')}">
                 <span class="error" th:errors="*{program.id}">Program Name Error</span><br>
-            </span>
+            </th:block>
             <select id="prog" th:field="*{program.id}">
                 <option value="0">--- Select Program ---</option>
                 <option th:each="p: ${programs}" th:value="${p.id}" th:text="${p.programName}">Program Name</option>
@@ -63,9 +63,9 @@
         </p>
         <p>
             <label class="group-label">Year</label><br>
-            <span th:if="${#fields.hasErrors('programYear')}">
+            <th:block th:if="${#fields.hasErrors('programYear')}">
                 <span class="error" th:errors="*{programYear}">Program Name Error</span><br>
-            </span>
+            </th:block>
             <label><input type="radio" th:field="*{programYear}" th:value="1">&nbsp;1</label>
             <label><input type="radio" th:field="*{programYear}" th:value="2">&nbsp;2</label>
             <label><input type="radio" th:field="*{programYear}" th:value="3">&nbsp;3</label>
